# billing

./: .dockerignore  .flake8  .gitignore  LICENSE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 3bd7de8092a8_initial.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: clients.py  health_check.py  operations.py
app/core/business_logic_layer/: clients.py  operations.py
app/core/settings/: settings.py
app/core/utils/: get_entity.py
app/crud/: base.py  clients.py  operations.py
app/db/: base_class.py  session.py
app/models/: clients.py  operations.py
app/schemas/v1/: client.py  operation.py
patroni/: docker-compose.yml  haproxy.cfg
scripts/: alembic.cmd  alembic.sh  format.cmd  format.sh  start.cmd  start.sh  stop.cmd  stop.sh  tests.cmd  tests.sh
tests/: conftest.py
tests/api/v1/: test_clients.py  test_operations.py
tests/business_logic_layer/: test_clients.py  test_operations.py
tests/crud/: test_clients.py  test_operations.py
tests/utils/: clients.py  common.py  operations.py
